# fit-opp

CreateMatrix/: CMakeLists.txt  main.cpp
lab1/CreateMatrix/: main.cpp
lab1/opp1_LinearSystemSolverMPI1/: CMakeLists.txt  main.cpp
lab1/opp1_LinearSystemSolverMPI2/: CMakeLists.txt  main.cpp
lab2/opp2/: vector_operations.h
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  CreateBoard.cpp  createBoard.h  main.cpp
lab4_2/: CMakeLists.txt
lab5/: CMakeLists.txt  Task.h  main.cpp
opp1_LinearSystemSolver/: CMakeLists.txt  main.cpp
opp2/: CMakeLists.txt  double.h  main.cpp  vector_operations.c  vector_operations_omp_union.c  vector_operations_omp_union.h
